[gd_scene load_steps=18 format=3 uid="uid://gkgo4t5s1h7x"]

[ext_resource type="Script" path="res://Scenes/UI/main_menu.gd" id="1_jliru"]
[ext_resource type="Texture2D" uid="uid://dy7baby5ksfpr" path="res://Art/Menus/deadweight title alone.svg" id="2_676wp"]
[ext_resource type="Texture2D" uid="uid://c07umaqwoigfc" path="res://Art/Menus/bigship.png" id="2_fy7nj"]
[ext_resource type="Theme" uid="uid://cexmcmmcmil1d" path="res://Resources/UI/kenneyUI.tres" id="4_8nn3a"]
[ext_resource type="PackedScene" uid="uid://d3ooplnmbcpgt" path="res://Scenes/UI/Cinematic/explosion_spawner.tscn" id="5_y85r3"]
[ext_resource type="Shader" path="res://Scripts/Shaders/crt_with_fisheye.gdshader" id="6_irfxy"]
[ext_resource type="Shader" path="res://Scripts/Shaders/crtagain.gdshader" id="7_klb3i"]
[ext_resource type="PackedScene" uid="uid://bxebxj7d50njp" path="res://Scenes/Audio/rumble_looper.tscn" id="8_yygft"]
[ext_resource type="AudioStream" uid="uid://c0nwfxwtfwo36" path="res://Audio/Music/Sci_Fi_Alarm_Loop_15.wav" id="9_xptvl"]
[ext_resource type="AudioStream" uid="uid://ctm4dk11l5f1j" path="res://Audio/Music/Sci_Fi_Alarm_Loop_13.wav" id="10_brde6"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ixk46"]
shader = ExtResource("6_irfxy")
shader_parameter/background_color = Color(0, 0, 0, 0)
shader_parameter/line_color = Color(0, 1, 1, 0.152941)
shader_parameter/line_freq = 3.675
shader_parameter/height = 0.29
shader_parameter/speed = 0.55
shader_parameter/scale = Vector2(0.285, 0.125)

[sub_resource type="Gradient" id="Gradient_yxq10"]
interpolation_mode = 1
colors = PackedColorArray(0, 0, 0, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_4642b"]
gradient = SubResource("Gradient_yxq10")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1oj4t"]
shader = ExtResource("7_klb3i")
shader_parameter/scanline_count = 392.857

[sub_resource type="Animation" id="Animation_uf2yk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/MarginContainer/VBoxContainer/Node2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer/MarginContainer/VBoxContainer/Node2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(357, 320)]
}

[sub_resource type="Animation" id="Animation_kccgd"]
resource_name = "enter"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/MarginContainer/VBoxContainer/Node2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.65, 0.85, 1),
"transitions": PackedFloat32Array(1.86607, 0.812252, 1.6245, -0.5, 1),
"update": 0,
"values": [Vector2(357, 808), Vector2(357, 320), Vector2(357, 515), Vector2(357, 510), Vector2(357, 400)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer/MarginContainer/VBoxContainer/Node2D:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.55, 0.9),
"transitions": PackedFloat32Array(1.31951, 1, 1.6245, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1.25, 1.25), Vector2(0.8, 0.8), Vector2(1, 1)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"start_playing_audio"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g2t8l"]
_data = {
"RESET": SubResource("Animation_uf2yk"),
"enter": SubResource("Animation_kccgd")
}

[node name="MainMenu" type="CanvasLayer" node_paths=PackedStringArray("tester")]
follow_viewport_enabled = true
script = ExtResource("1_jliru")
tester = NodePath("ExplosionSpawner")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer"]
modulate = Color(0.027451, 0.027451, 0.027451, 1)
layout_mode = 2
texture = ExtResource("2_fy7nj")
expand_mode = 5
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/margin_top = 75
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="TextureRect" type="TextureRect" parent="MarginContainer/MarginContainer/VBoxContainer"]
modulate = Color(0.0901961, 0, 0.0117647, 1)
custom_minimum_size = Vector2(700, 0)
layout_mode = 2
size_flags_vertical = 2
texture = ExtResource("2_676wp")
expand_mode = 5
stretch_mode = 5

[node name="Node2D" type="Node2D" parent="MarginContainer/MarginContainer/VBoxContainer"]
position = Vector2(357, 320)

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/MarginContainer/VBoxContainer/Node2D"]
z_index = 3
custom_minimum_size = Vector2(300, 100)
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 90.0
size_flags_horizontal = 4
size_flags_vertical = 10
theme = ExtResource("4_8nn3a")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/MarginContainer/VBoxContainer/Node2D/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer/VBoxContainer/Node2D/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="PlayButton" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer/Node2D/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Play"

[node name="OptionsButton" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer/Node2D/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Options"

[node name="QuitButton" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer/Node2D/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Quit"

[node name="ExplosionSpawner" parent="." instance=ExtResource("5_y85r3")]
position = Vector2(647, 377)

[node name="TextureRect" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_ixk46")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
mouse_filter = 2
texture = SubResource("GradientTexture1D_4642b")

[node name="TextureRect2" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_1oj4t")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
mouse_filter = 2
texture = SubResource("GradientTexture1D_4642b")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
autoplay = "enter"
libraries = {
"": SubResource("AnimationLibrary_g2t8l")
}

[node name="RumbleLooper" parent="." instance=ExtResource("8_yygft")]
autoplay = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_xptvl")
volume_db = -7.765
pitch_scale = 0.95
autoplay = true
bus = &"Music"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_brde6")
volume_db = -10.0
autoplay = true
bus = &"Sounds"
